<resources>
    <string name="app_name">Smart City 3.0</string>
    <string name="skip">skip</string>
    <string name="enter_home">Enter Home</string>
    <string name="network_setting">Network Setting</string>
    <string name="guide_page_back_image">Guide Page Back Image</string>
    <string name="homepage">首页</string>
    <string name="all_service">全部服务</string>
    <string name="news">新闻</string>
    <string name="personal_center">个人中心</string>
    <string name="party_construct">智慧党建</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="back_logo"><![CDATA[<]]></string>
    <string name="gender">Gender ：</string>
    <string name="service_name">Service Name</string>
    <string name="this_is_news_title">This is News Title.This is News Title.This is News Title.This is News Title.This is News Title.This is News Title.This is News Title.</string>
    <string name="news_image">News Image</string>
    <string name="this_is_news_content">This is News Content.This is News Content.This is News Content.This is News Content.This is News Content.This is News Content.This is News Content.This is News Content.This is News Content.This is News Content.</string>
    <string name="news_banner">News Banner</string>
    <string name="save_username_password"><![CDATA[Save Username & Password]]></string>
    <string name="avatar">Avatar</string>
    <string name="user_name">User Name</string>
    <string name="list_of_orders">订单列表</string>
    <string name="personal_information">个人信息</string>
    <string name="sign_out">退出登录</string>
    <string name="change_the_password">修改密码</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_points">我的积分</string>
    <string name="feedback">意见反馈</string>
    <string name="my_username">我的昵称</string>
    <string name="other">Other</string>
    <string name="plus">\"+ \"</string>
    <string name="minus">\"- \"</string>
</resources>