<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="10dp"
    android:background="@drawable/news_list_back_radius_form"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_news_list_form_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:lines="1"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="5dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/this_is_news_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_news_list_form_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/news_image"
            android:padding="8dp"
            android:scaleType="fitXY"
            android:src="@mipmap/android_test_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_news_list_form_content"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:lines="3"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:text="@string/this_is_news_content" />

            <TextView
                android:id="@+id/tv_news_list_form_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"                android:text="2022-10-20"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_news_list_form_likeNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="43"
                    android:textSize="17sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_thumb_up_24" />

                <TextView
                    android:id="@+id/tv_news_list_form_readNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="43"
                    android:textSize="17sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_remove_red_eye_24" />

                <TextView
                    android:id="@+id/tv_news_list_form_commentNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="4"
                    android:textSize="17sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_sms_24" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>